styles/newsletter.css
.newsletter-signup{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 25px;
    padding-top: 15px;
    width: auto;
    height: auto;
    color: rgb(112, 74, 25);
    border-style: solid;
    border-radius: 10px;
    border-color: black;
    background-color: rgb(0, 0, 0);
    font-family: "Libre Baskerville", Arial, Helvetica, sans-serif;
    font-size: 15px;
    font-weight: bold;
    font-weight: bold;
    margin-bottom: 35px;
}
.newsletter-signup-title{
    margin-bottom: 5px;
}
.zinger-container{
    margin-bottom: 15px;
}
.zinger{
    color: whitesmoke;
    font-size: 25px;
}
.bottom-signup-text{
    text-align: center;
    width:80%;
    color: whitesmoke;
    font-size: 12px;
    margin-bottom: 15px;
}
.email-box{
    border-radius: 10px;
    padding: 3px;
    padding-left: 6px;
    border-style: none;
}
.verification-container{
    display: flex;
    align-items: start;
    justify-content: start;
    font-size: 8px;
    width:70%;

}

.section{
    width:80vw;
    margin-bottom: 40px;
}
.the-latest{
    display: flex;
}
.the-latest > div:nth-child(1) {
  flex: 1;                      
}
.the-latest > div:nth-child(2){
  flex: 1;         
} 
.title{
    font-family: "Libre Baskerville", Arial, Helvetica, sans-serif;
    font-size: 25px;
    color:white;
    text-decoration: underline;
    text-underline-offset: 5px;
}
.text{
    font-family: "Libre Baskerville", Arial, Helvetica, sans-serif;
    font-size: 18px;
    color:white;
}
.image{
    width: 50%;
    height: 30%;
    border-style: solid;
    border-radius: 10px;
}

.events-list{
    font-family: "Libre Baskerville", Arial, Helvetica, sans-serif;
    font-size: 18px;
    color:white;
}

